Fixed alignment of invoice-card on larger devices

--- a/invoice-app/src/app/invoice-card/invoice-card.component.scss
+++ b/invoice-app/src/app/invoice-card/invoice-card.component.scss
@@ -94,7 +94,8 @@
     }
 
     .invoice-info-left {
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         justify-content: space-around;
         align-items: center;
         width: 100%;
